# Customer-Support-RAG-Powered-Intelligent-Chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  startup.txt
.github/workflows/: chatapp-AutoDeployTrigger-3b9b24ce-7c48-476e-9820-0cac674f15b5.yml
Data Collection & Preprocessing/: Milestone.ipynb  amazon_qa.ipynb  cleaned_faq_dataset.csv
application/: .dockerignore  .flaskenv  Dockerfile  README.md  app.py  db.py  pyproject.toml  requirements.txt
application/src/: app.py  config.py  db.py  errors.py  llm.py  retriever.py
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  config.js  index.css
dashboard/src/components/: EmbeddingSchedulePanel.jsx  MLflowPanel.jsx  PerformancePanel.jsx  PipelinePanel.jsx  QueryLogsPanel.jsx
dashboard/src/components/ui/: SharedComponents.jsx
dashboard/src/hooks/: useAnimations.js  useApi.js
data/: cleaned_faq_dataset.csv
endpoint/: app.py  requirements.txt
endpoint/docs/: evaluation_report.md
endpoint/evaluation/: __init__.py  chunking_experiment.py  chunking_results.json  evaluate.py  golden_dataset.json  golden_dataset_curator.py  prompt_tuning.py  prompt_tuning_results.json  ragas_eval.py  ragas_results.json  results.json
endpoint/templates/: index.html
notebooks/: 01_Architects_VectorDB_LLM_Integration.ipynb  02_pinecone_vector_db.ipynb  faq_eda.ipynb
preprocessing/: amazon_qa.ipynb  hf_faq.ipynb
