[project]
name = "endpoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-limiter>=4.1.1",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "pinecone>=9.0.0",
]

[project.optional-dependencies]
production = [
    "gunicorn>=26.0.0",
]
